<resources>
    <string name="app_name">TestLifehackStudio</string>
    <string name="all_companies">All companies</string>
    <string name="company_name">company name</string>
    <string name="company_pic">Company pic</string>
    <string name="lifehack_studio">LifeHack studio</string>
    <string name="company_info">Company info</string>
    <string name="description">Description:</string>
    <string name="description_block">description</string>
    <string name="location">Location:</string>
    <string name="location_lock">location</string>
    <string name="contacts">Contacts:</string>
    <string name="contacts_lock">contacts</string>
</resources>